--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "roast-my-github",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.2.2"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
-  }
+	"name": "roast-my-github",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@google/generative-ai": "^0.24.0",
+		"@liorpo/react-star-wars-crawl": "^1.0.3",
+		"@mantine/core": "^7.17.2",
+		"@mantine/hooks": "^7.17.2",
+		"graphql-request": "^7.1.2",
+		"next": "15.2.2",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"tailwind-preset-mantine": "^2.0.4"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	}
 }
